--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -42,8 +42,10 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
+          context: .
+          file: ./api_yamdb/Dockerfile
           push: true
-          tags: dmortem/api_yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
           
   deploy:
     runs-on: ubuntu-latest
@@ -57,9 +59,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
             sudo docker-compose stop
             sudo docker-compose rm web
-            touch .env
+            sudo rm .env
+            sudo touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
