--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -6,11 +6,11 @@ server {
 	server_tokens off;
 	
     location /static/ {
-        root /var/html/;
+        root /app/api_yamdb;
     }
 
     location /media/ {
-        root /var/html/;
+        root /app/api_yamdb;
     }
 
     location / {
