--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -23,8 +23,8 @@ services:
       - "80:80" 
     volumes: 
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/app/api_yamdb/static/ 
-      - media_value:/app/api_yamdb/media/ 
+      - static_value:/var/html/static/ 
+      - media_value:/var/html/media/ 
     depends_on: 
       - web 
 volumes: 
