--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
+        pytest
         cd api_yamdb/
         python manage.py test
         
@@ -60,6 +61,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
+            sudo service nginx stop
             sudo docker-compose stop
             sudo docker-compose rm web
             rm .env
